# C-TuLiP

./: .gitignore  LICENSE  README.md  Reduce.py  requirements.txt  setup.py  synth2.py  testcase.ipynb
Examples/: Alice.py  AliceImpl.c  ThermoStat.py  WindowComm.py  __init__.py
Examples/AmbaBus/: AmbaBus.py
Examples/Arbiter/: Arbiter.py  results_gr1c.txt  results_omega.txt
Examples/Comm_Window/: Test_Comm.py  WindowComm.py
Examples/Lift/: Lift.py  Lift.xlsx  Lift_bdd.py  Lift_spec.py  MineStrategy.py  excel.txt  results.txt
Examples/SpeedRover/: Alice.py  AliceImpl.h  Ctrl_modesImpl.c  Ctrl_modesImpl.h  Makefile  Makefile_info.py  Measure1.c  Measure2.c  Measure2.h  Measure3_failure_constant.c  Measure3_nofailure.c  Measure3_stereo_only.c  Measure_good_to_fail.c  Test.py  act_impl.c  act_impl.h  cimple_c_from_py.c
Examples/SpeedRover/Demo_Alice_ext/: Application.py  Ctrl_modesImpl.c  Ctrl_modesImpl.h  Makefile  Readme  StrategyImpl.c  StrategyImpl.h  application.c  application.h  application.out  gengluecode.py  main.c  setup.py
Examples/SpeedRover/Demo_Alice_ext/linux/: active
Examples/Thermostat/: ThermoStat.py
Examples/cimpleCraft/: cimple4.py  cimpleCraft.py  find_safe_states.py
Interface/: DSL.py  Reduce.py  ReduceIncomplete.py  Statechart copy.py  Statechart.py  Transform.py  __init__.py  synth2.py
Interface/Cimple/: .gitignore  CMakeLists.txt  Makefile  act_impl.c  act_impl.h  cimple_auxiliary_functions.c  cimple_auxiliary_functions.h  cimple_c_from_py.c  cimple_c_from_py.h  cimple_controller.c  cimple_controller.h  cimple_gsl_library_extension.c  cimple_gsl_library_extension.h  cimple_minksum_wrapper.cpp  cimple_minksum_wrapper.h  cimple_mpc_computation.c  cimple_mpc_computation.h  cimple_polytope_library.c  cimple_polytope_library.h  cimple_safe_mode.c  cimple_safe_mode.h  cimple_system.c  cimple_system.h  find_controller.c  find_controller.h  init_c_from_py.c  init_c_from_py.h  main.c  system.c  system.h
SymbolicReductions/: Bisimulation.py  Lift_Mealyred.py  OptimistPrune.py  SymbolicMealy.py  Transform2Mealy.py  __init__.py
doc/: Makefile
doc/source/: Programming.rst  conf.py  index.rst  library.bib
tests/: test_Incomplete.py  test_Symbolic.py
